testdata/baselines/reference/submodule/compiler/exportEqualCallable.errors.txt
exportEqualCallable_1.ts(2,26): error TS2307: Cannot find module 'exportEqualCallable_0' or its corresponding type declarations.


==== exportEqualCallable_1.ts (1 errors) ====
    ///<reference path='exportEqualCallable_0.ts'/>
    import connect = require('exportEqualCallable_0');
                             ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'exportEqualCallable_0' or its corresponding type declarations.
    connect();
    
==== exportEqualCallable_0.ts (0 errors) ====
    var server: {
        (): any;
    };
    export = server;
    